WIP: Updated openapi documentation; Small fixes over the exceptions handling
